--- a/eas.json
+++ b/eas.json
@@ -1,3 +1,18 @@
 {
-  "build": { "preview": { "ios": { "simulator": true } }, "production": {} }
+  "build": {
+    "preview": {
+      "android": {
+        "buildType": "apk"
+      }
+    },
+    "preview2": {
+      "android": {
+        "gradleCommand": ":app:assembleRelease"
+      }
+    },
+    "preview3": {
+      "developmentClient": true
+    },
+    "production": {}
+  }
 }
