--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "expo-router-typescript",
+  "name": "warp-moqt",
+  "version": "1.0.0",
   "scripts": {
     "build:android": "npx eas-cli build -p android --profile preview --local",
     "build:ios": "npx eas-cli build -p ios --profile preview --local",
     "build:web": "npx expo export --platform web -c --output-dir web-build",
-    "dev": "npm run start",
+    "dev": "expo start --go",
     "format": "npx prettier src --write",
     "lint": "eslint src/**/*.tsx src/**/*.ts",
     "lint:fix": "npm run lint -- --fix",
@@ -14,31 +15,24 @@
     "serve:app": "expo start --dev-client",
     "serve:web": "npx serve web-build --single",
     "setup": "npm install expo && expo install",
-    "start": "expo start --go",
     "test": "jest",
     "upgrade": "expo upgrade",
-    "web": "expo start --web --no-dev --host localhost --port 3000"
+    "web": "expo start --web --no-dev --host localhost --port 3000",
+    "android": "expo run:android",
+    "ios": "expo run:ios"
   },
   "overrides": {
     "semver": ">=7.5.4"
   },
   "dependencies": {
-    "@react-navigation/native": "^6.1.9",
-    "expo": "^51.0.22",
+    "expo": "^51.0.37",
     "expo-dev-client": "~4.0.20",
     "expo-font": "~12.0.9",
-    "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.18",
-    "expo-status-bar": "~1.12.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.74.3",
-    "react-native-animatable": "^1.4.0",
-    "react-native-gesture-handler": "~2.16.1",
-    "react-native-reanimated": "~3.10.1",
+    "expo-router": "^3.5.23",
+    "react": "18.3.1",
+    "react-native": "0.75.0",
     "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10",
+    "react-native-webview": "^13.8.6",
     "styled-components": "^5.3.11"
   },
   "devDependencies": {
@@ -59,8 +53,9 @@
     "eslint-plugin-react": "^7.33.2",
     "jest": "^29.7.0",
     "jest-expo": "~51.0.3",
-    "prettier": "^3.1.1",
+    "prettier": "^3.3.3",
     "react-test-renderer": "^18.2.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "metro": "^0.80.12"
   }
 }
