--- a/package.json
+++ b/package.json
@@ -25,13 +25,15 @@
     "semver": ">=7.5.4"
   },
   "dependencies": {
+    "@expo/config-plugins": "~8.0.0",
     "expo": "^51.0.37",
     "expo-dev-client": "~4.0.20",
     "expo-font": "~12.0.9",
     "expo-router": "^3.5.23",
     "react": "18.3.1",
-    "react-native": "0.75.0",
+    "react-native": "0.75.4",
     "react-native-safe-area-context": "4.10.5",
+    "react-native-static-server": "^0.5.0",
     "react-native-webview": "^13.8.6",
     "styled-components": "^5.3.11"
   },
@@ -53,9 +55,9 @@
     "eslint-plugin-react": "^7.33.2",
     "jest": "^29.7.0",
     "jest-expo": "~51.0.3",
+    "metro": "^0.80.12",
     "prettier": "^3.3.3",
     "react-test-renderer": "^18.2.0",
-    "typescript": "^5.3.3",
-    "metro": "^0.80.12"
+    "typescript": "^5.3.3"
   }
 }
